--- a/blog/Technology/2026-02-25-obsidian.mdx
+++ b/blog/Technology/2026-02-25-obsidian.mdx
@@ -1,3 +1,14 @@
+---
+title: "Tích Hợp Obsidian Với Jekyll Blog Trên GitHub Pages: Workflow Siêu Mượt"
+description: "Wiki"
+tags: [docusaurus, toc]
+toc_min_heading_level: 2
+toc_max_heading_level: 4
+---
+
+import TOCInline from '@theme/TOCInline';
+
+
 # Tích Hợp Obsidian Với Jekyll Blog Trên GitHub Pages: Workflow Siêu Mượt
 
 Bạn mê Obsidian với graph view, backlinks nhưng muốn publish blog đẹp trên GitHub Pages? Workflow này dùng Obsidian làm editor chính, sync Markdown trực tiếp vào Jekyll repo – không copy-paste, tự động build/deploy! Mình đã test trên Ubuntu, siêu tiện cho tech blog như Docker Ubuntu.[1][2][3]
