Revise Obsidian and Jekyll integration blog post
Updated blog post on integrating Obsidian with Jekyll for GitHub Pages.

--- a/blog/Technology/2026-02-25-obsidian.mdx
+++ b/blog/Technology/2026-02-25-obsidian.mdx
@@ -7,7 +7,7 @@ toc_max_heading_level: 4
 ---
 
 import TOCInline from '@theme/TOCInline';
-
+<TOCInline toc={toc} />
 
 # Tích Hợp Obsidian Với Jekyll Blog Trên GitHub Pages: Workflow Siêu Mượt
 
